--- a/src/styles.css
+++ b/src/styles.css
@@ -2,22 +2,16 @@
   font-family: sans-serif;
   font-size: 12.5px;
   text-align: center;
-  padding-top: 300px;
-  padding-left: 350px;
+  padding-top: 350px;
+  padding-left: 230px;
 }
 
 .WeatherDays {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 300px;
 }
 
-body {
-  background: linear-gradient(
-    to bottom,
-    #f2f5f6 0%,
-    #e3eaed 0%,
-    #e3eaed 0%,
-    #e3eaed 100%,
-    #c8d7dc 100%
-  );
+.ForecastDays {
+  width: 150px;
+  height: 50px;
 }
