--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,9 @@
   font-family: sans-serif;
   font-size: 12.5px;
   text-align: center;
-  padding-top: 350px;
-  padding-left: 230px;
+  margin: 0 auto;
+  padding: 10rem 5rem;
+  max-width: 80rem;
 }
 
 .WeatherDays {
@@ -11,7 +12,25 @@
   height: 300px;
 }
 
-.ForecastDays {
-  width: 150px;
-  height: 50px;
+.pTemp {
+  font-size: 80px;
+  color: white;
+  text-align: center;
+  padding-top: 50px;
+  font-weight: 3;
+}
+
+.WeatherCards {
+  margin: 0 auto;
+  padding: 4rem 9rem;
+}
+
+body {
+  background-image: url("https://images.wallpaperscraft.com/image/highway_deserted_iceland_130778_1366x768.jpg");
+  background-size: cover;
+}
+
+.cardImg {
+  background-image: url("https://images.unsplash.com/photo-1495463914062-3c6c4e384647?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7baca7b3e0d4f7f8933b058190a87f16&auto=format&fit=crop&w=315&q=80");
+  background-size: cover;
 }
