--- a/src/styles.css
+++ b/src/styles.css
@@ -3,34 +3,80 @@
   font-size: 12.5px;
   text-align: center;
   margin: 0 auto;
-  padding: 10rem 5rem;
-  max-width: 80rem;
+  padding: 0 5rem;
 }
 
-.WeatherDays {
-  width: 150px;
-  height: 300px;
+.scene {
+  width: 200px;
+  height: 260px;
+  perspective: 600px;
+  float: left;
+}
+
+.title {
+  color: #bdbdbd;
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 100px;
+  font-weight: bold;
+  letter-spacing: -1px;
+  line-height: 1;
+  text-align: center;
+  padding: 5rem;
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.7);
+}
+
+.card-component {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  background: #424242;
+  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.card-component__face {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  backface-visibility: hidden;
+}
+
+.card-component__face--front {
+  background: red;
+}
+
+.card-component__face--back {
+  background: blue;
+  transform: rotateY(180deg);
+}
+
+.card-component.is-flipped {
+  transform: rotateY(180deg);
 }
 
 .pTemp {
   font-size: 80px;
-  color: white;
+  color: #bdbdbd;
   text-align: center;
-  padding-top: 50px;
-  font-weight: 3;
+  padding-top: 2rem;
 }
 
-.WeatherCards {
-  margin: 0 auto;
-  padding: 4rem 9rem;
+.dateStyle {
+  font-size: 1.6rem;
+  padding-top: 2rem;
+  color: #bdbdbd;
 }
 
 body {
-  background-image: url("https://images.wallpaperscraft.com/image/highway_deserted_iceland_130778_1366x768.jpg");
-  background-size: cover;
+  background: #212121;
 }
 
-.cardImg {
-  background-image: url("https://images.unsplash.com/photo-1495463914062-3c6c4e384647?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7baca7b3e0d4f7f8933b058190a87f16&auto=format&fit=crop&w=315&q=80");
-  background-size: cover;
+.input-component {
+  background: #424242;
+  border: none;
+}
+
+.arrow {
+  padding-top: 2rem;
 }
