--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,5 @@
 @import "./components/title";
 @import "./components/card-content";
 @import "./components/input";
+@import "./components/card-div";
+@import "./components/big-card";
