--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,12 +1,7 @@
 .App {
   font-family: sans-serif;
-  font-size: 12.5px;
-  text-align: center;
-  margin: 0 auto;
-  padding: 0 5rem;
-  background: #212121;
 }
 
 body {
-  background: #212121;
+  background: white;
 }
