Major changes to design

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,7 +1,9 @@
 .App {
   font-family: sans-serif;
+  max-width: 65rem;
+  margin: 0 auto;
 }
 
 body {
-  background: white;
+  background: #2b2928;
 }
