--- a/src/styles/components/_card-content.scss
+++ b/src/styles/components/_card-content.scss
@@ -2,11 +2,11 @@
   font-size: 80px;
   color: #bdbdbd;
   text-align: center;
-  padding-top: 2rem;
 }
 
 .dateStyle {
-  font-size: 1.6rem;
+  font-size: 2rem;
   color: #bdbdbd;
   text-align: center;
+  margin-bottom: 0;
 }
