--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,8 @@
 @import "./components/card";
 @import "./base/base";
-@import "./components/title";
 @import "./components/card-content";
-@import "./components/input";
 @import "./components/card-div";
 @import "./components/big-card";
+@import "./components/footer";
+@import "./components/header";
+@import "./components/card-back";
