--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,8 +2,12 @@
   font-family: sans-serif;
   max-width: 65rem;
   margin: 0 auto;
+  margin-bottom: 1rem;
 }
 
 body {
-  background: #2b2928;
+  background: url("https://uploads.codesandbox.io/uploads/user/ebdce14a-2375-45ff-8e70-2724b4f0189c/Tmzf-sea-2755908_1920.jpg")
+    no-repeat;
+  background-size: 100%;
+  /* background: #2b2928; */
 }
