--- a/src/styles/components/_big-card.scss
+++ b/src/styles/components/_big-card.scss
@@ -4,7 +4,8 @@
   padding: 0.5rem;
   padding-bottom: 0;
   color: white;
-  background: url("https://picsum.photos/700/700/?random") no-repeat;
+  background: url("https://uploads.codesandbox.io/uploads/user/ebdce14a-2375-45ff-8e70-2724b4f0189c/KLxC-Hall3.jpg")
+    no-repeat;
   background-size: 100%;
   font-family: "Rajdhani", sans-serif;
 }
@@ -23,8 +24,8 @@
 .big-card__sun {
   display: flex;
   margin-right: 0;
-  font-style: italic;
   font-weight: 520;
+  font-size: 0.8rem;
 }
 
 .big-card__sunrise {
@@ -39,7 +40,6 @@
 .big-card__icon {
   float: right;
   font-size: 0.8rem;
-  font-style: italic;
   margin-left: 60rem;
   padding-top: -20rem;
   padding-right: 1rem;
