--- a/src/styles/components/_card-back.scss
+++ b/src/styles/components/_card-back.scss
@@ -1,31 +1,40 @@
-.card-back__tempMin {
-  border-bottom: 1px solid black;
-  font-size: 0.9rem;
+.card-back__temp {
+  border-bottom: 1px solid lighten(#2b2928, 50%);
+  border-top: 1px solid lighten(#2b2928, 50%);
   margin: 0;
   padding: 0.2rem 0;
+  padding-top: 0.4rem;
+  display: flex;
+  margin-top: 9.5rem;
 }
 
-.card-back__tempHigh {
-  border-bottom: 1px solid black;
-  font-size: 0.9rem;
+.card-back__temp-low {
+  padding-left: 0.5rem;
+}
+
+.card-back__temp-high {
+  margin-left: 8rem;
+}
+
+.card-back__humidity-and-wind {
   margin: 0;
-  padding: 0.2rem 0;
+  padding: 0.2rem 0.2rem;
+  display: flex;
 }
 
-.card-back__humidity {
-  border-bottom: 1px solid black;
-  font-size: 0.9rem;
-  margin: 0;
-  padding: 0.2rem 0;
+.card-back__wind {
+  margin-left: 5rem;
 }
 
-.card-back__wind-speed {
-  border-bottom: 1px solid black;
-  font-size: 0.9rem;
-  padding: 0.2rem 0;
+.card-back__wind p {
+  font-size: 0.7rem;
 }
 
 .card-back__clouds {
   font-size: 0.9rem;
-  padding: 0.2rem 0;
+  padding: 0.1rem 0;
+}
+
+.card-back__clouds i {
+  margin-left: -2rem;
 }
