--- a/src/styles/components/_card-div.scss
+++ b/src/styles/components/_card-div.scss
@@ -1,5 +1,5 @@
 .card-div {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
 }
