--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,28 +1,37 @@
 .header__input-component {
-  background: #424242;
   border: none;
-  height: 2.5rem;
-  width: 30rem;
+  height: 2.3rem;
+  width: 20rem;
   font-size: 1.4rem;
   color: white;
   font-family: "Rajdhani", sans-serif;
   padding: 0.5rem;
+  background: #2b2928;
 }
 
-.header {
-  display: inline;
+.error {
+  color: red;
+  font-family: "Rajdhani", sans-serif;
+  font-style: italic;
+  font-size: 0.9rem;
+  margin: 0;
+  font-weight: 400;
+}
+
+.form {
+  display: flex;
 }
 
 .header__title {
   color: white;
   font-family: "Rajdhani", sans-serif;
-  font-size: 30px;
+  font-size: 2.1rem;
   letter-spacing: -1px;
-  padding: 0.5rem;
 }
 
-.bg-dark {
-  background-color: #2b2928 !important;
+.input {
+  border-bottom: 1px solid lighten(#2b2928, 80%);
+  padding: 2rem 0;
 }
 
 .header__button {
@@ -30,6 +39,7 @@
   color: white;
   border: 1px solid white;
   font-family: "Rajdhani", sans-serif;
-  padding: 0.4rem;
-  margin: 0.5rem;
+  margin-left: 0.2rem;
+  cursor: pointer;
+  height: 2.2rem;
 }
